--- a/src/components/gamemenu/gamemenu.css
+++ b/src/components/gamemenu/gamemenu.css
@@ -182,4 +182,17 @@
       );
     }
     }
+
+    @media screen and (max-width: 389px) {
+      .resultContainer {
+        justify-content: center;
+        margin-left: 200%;
+        margin-top: 150px;
+      }
+      .resultMessageContainer {
+        color: red;
+        font-family: bold;
+        font-size: 60px;
+      }
+    }
   }
