--- a/src/components/gamemenu/gamemenu.css
+++ b/src/components/gamemenu/gamemenu.css
@@ -70,6 +70,7 @@
     color: white;
     font-family: bold;
     font-size: 60px;
+    
   }
 
   .playAgainContainer {
@@ -107,16 +108,6 @@
     cursor: pointer;
   }
 
-  @media (min-width: 1300px) {
-    .youPickedContainer {
-        text-align: center;
-        margin-top: -300px;
-        margin-left: 70px;
-        color: white;
-        font-family: "semiBold"; 
-        letter-spacing: 2px;
-        position: absolute;
-    }
     @media (min-width: 1300px) {
       .youPickedContainer {
           text-align: center;
@@ -181,18 +172,27 @@
         transparent 80%
       );
     }
-    }
+  }
 
-    @media screen and (max-width: 389px) {
+    @media (max-width: 389px) {
       .resultContainer {
         justify-content: center;
-        margin-left: 200%;
         margin-top: 150px;
       }
       .resultMessageContainer {
-        color: red;
         font-family: bold;
         font-size: 60px;
       }
+      .playAgainContainer {
+        margin-left: -50px;
+      }
+
+      .theHousePickedContainer {
+        width:200px;
+      }
+
+      .cpuComponentToRenderContainer {
+        margin-top: -155px;
+        margin-right: 50px;
+      }
     }
-  }
