--- a/src/components/gamemenu/gamemenu.css
+++ b/src/components/gamemenu/gamemenu.css
@@ -185,6 +185,7 @@
         font-size: 60px;
       }
       .playAgainContainer {
+        margin-left: -70px;
       }
 
       .theHousePickedContainer {
